examples/invalid/comment-unknown-node-target/src/php/CheckoutService.php
<?php

/**
 * @arch.node service checkout-service
 * @arch.name Checkout Service
 * @arch.domain orders
 * @arch.owner team-commerce
 * @arch.calls api missing-payment-api
 */
final class CheckoutService
{
}
